--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </span>
 
- <button onclick="Clearx()" id="Ok">Ok </button>
+ <button onclick="Clearx()" id="Clear" style="none">Ok </button>
         
         </div>
         <footer>
