--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </span>
 
- <button onclick="Clearx()" id="Clear" >Ok </button>
+ <button onclick="Clearx()" id="Clear" display="none" >Ok </button>
         
         </div>
         <footer>
