--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <script src="script.js"></script>
+    <script src="script.js"
+            window.onload=func()></script>
     <link rel="stylesheet" href="style.css">
     <title>Simple Interest Calculator</title>
     </head>
