--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <script src="script.js"
-            document.onload=func()></script>
+            window.onload="func()"></script>
     <link rel="stylesheet" href="style.css">
     <title>Simple Interest Calculator</title>
     </head>
